<resources>
    <string name="app_name">GalleryMy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message">To continue working with GalleryMy, you need to grant the application permissions to work with media files on your device.</string>
    <string name="give_permission">Give permissions</string>
    <string name="exit">exit</string>
    <string name="rename_button">Rename</string>
    <string name="title_activity_image">ImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
    <string name="rename_submit">Rename</string>
    <string name="rename_cancel">Cancel</string>
    <string name="rename_message">Rename file</string>
</resources>